--- a/src/profile.html
+++ b/src/profile.html
@@ -39,5 +39,7 @@ title: Profile
         </div>
     </div>
 
-    <button class="btn btn--blue btn--rounded btn--small" type="submit">Сохранить</button>
+    <div class="form__footer">
+        <button class="btn btn--blue btn--rounded btn--small" type="submit">Сохранить</button>
+    </div>
 </form>
