Complete mobile and tablet version

--- a/src/post.html
+++ b/src/post.html
@@ -13,7 +13,7 @@ title: Post
     </div>
 
     <div class="post__header">
-        <h1 class="post__title post__title--mb0">Как писать код быстро
+        <h1 class="post__title post__title--open">Как писать код быстро
         и безболезненно?</h1>
         <ul class="post__data">
             <li class="post__data-item">
