--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@ title: Home
                 <input type="file" id="add-post-file">
             </label>
             <button class="add-post__send" type="submit">
-                <img src="assets/images/send-post.svg" alt="Отправить">
+                Отправить
             </button>
         </div>
     </form>
