--- a/src/works.html
+++ b/src/works.html
@@ -7,7 +7,10 @@ title: Works
 
 <article class="work">
     <div class="work__preview">
-        <img src="assets/images/work-1.jpg" alt="">
+        <picture>
+            <source srcset="https://place-hold.it/575x150" media="(max-width: 575px)">
+            <img src="assets/images/work-1.jpg" alt="">
+        </picture>
     </div>
     <div class="work__content">
         <h2 class="work__title">
@@ -29,7 +32,10 @@ title: Works
 
 <article class="work">
     <div class="work__preview">
-        <img src="assets/images/work-2.jpg" alt="">
+        <picture>
+            <source srcset="https://place-hold.it/575x150" media="(max-width: 575px)">
+            <img src="assets/images/work-2.jpg" alt="">
+        </picture>
     </div>
     <div class="work__content">
         <h2 class="work__title">
